--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 config.php
 controlpanel/logfile.txt
 controlpanel/providers.php
+controlpanel/providers/
+public_html/controlpanel/logfile.txt
 
 # Ignore favicon if it exists
 public_html/favicon.ico
