--- a/listing/apache.conf
+++ b/listing/apache.conf
@@ -5,6 +5,8 @@
 	
 	# Listing GUI
 	RewriteEngine on
+  # rewrite /about.html to /about.php
+  RewriteRule ^/about.html$ /about.php [L]
 	# Main pages
 	RewriteRule ^/(open|forthcoming|closed|archive|controlpanel|loggedout).html$ /index.php?action=$1 [L,QSA]
 	# Control panel is handled elsewhere
